better res banner also fixed the banner being cropped.

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,10 +1,10 @@
 .banner {
   background-image: url("../../../MakethonLogo.png");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 328.5px;
-  height: 167.5px;
+  width: 321.6px;
+  height: 173.3px;
   position: fixed;
   top: 0;
   left: 50%;
